# src/controllers/Book.controller.js
@@ -5,6 +5,12 @@ const bookController = express.Router();
 
 bookController.get('/book/getById', (req, res, next) => {
     // #swagger.tags = ['book']
+        // #swagger.description = 'Busca livro pelo Id'
+    /* #swagger.parameters['id'] = {
+        required: true,
+        type: 'integer',
+        description: 'Id do livro a ser buscado.'
+    } */
 
     bookService.getBookById(parseInt(req.query.id)).then((response) => {
         res.send(response);
@@ -16,7 +22,50 @@ bookController.get('/book/getById', (req, res, next) => {
 
 bookController.get('/book/searchBook', (req, res, next) => {
     // #swagger.tags = ['book']
-    
+    // #swagger.description = 'Pesquisa de livro'
+
+    /* #swagger.parameters['term'] = {
+        description: 'Termo para buscar o livro',
+        required: true,
+        type: 'string'
+    } *\
+
+    /* #swagger.parameters['page'] = {
+        description: 'Página de itens.',
+        required: true,
+        type: 'integer'
+    } */
+
+    /* #swagger.parameters['itens'] = {
+        description: 'Quantidade de itens a buscar.',
+        required: true,
+        type: 'integer'
+    } */
+
+    /* #swagger.responses[200] = { 
+        schema: {
+            data: {
+                idBook: 0,
+                photo: 'base64 ou null',
+                name: 'nome',
+                publisher: 'Editora',
+                dateOfPublication: 'yyyy-MM-dd',
+                synopsis: 'sinopse'
+                
+            },
+            status: true
+        },
+        description: 'Sucesso.' 
+    } */
+
+    /* #swagger.responses[500] = { 
+        schema: {
+            msg: 'Mensagem de erro.',
+            status: false
+        },
+        description: 'Erro.' 
+    } */
+
     const query = req.query;
     bookService.searchBook(query.term, query.page, query.itens).then((response) => {
         res.send(response);
@@ -28,6 +77,7 @@ bookController.get('/book/searchBook', (req, res, next) => {
 
 bookController.get('/book/getLastBooks', (req, res, next) => {
     // #swagger.tags = ['book']
+    
     bookService.getLastBooks().then((response) => {
         const data = fr.responseSucces(response);
         res.send(data);
